# py-ocelloids

./: README.md  pyproject.toml
client/: ocelloids.py
examples/: main.py  plot.py  print.py
